crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__box_opaque_proxy_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(WithBox, UserId, UserIdBox).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace: ROOT
  name: UserIdBox
: NEWTYPESTRUCT:
    - TYPENAME:
        namespace: ROOT
        name: UserId
    - - Proxy for boxed opaque lattice IDs.
? namespace: ROOT
  name: WithBox
: STRUCT:
    - - user_id:
          - TYPENAME:
              namespace: ROOT
              name: UserIdBox
          - []
    - []
