crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_adjacent_tagging_rename_all_kebab_transparent_and_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Message, UserId).unwrap()"
---
? namespace: ROOT
  name: Message
: ENUM:
    - 0:
        sign-in:
          - STRUCT:
              - session_token:
                  - U64
                  - []
              - owner_user_id:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
              - actor_id:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
          - []
    - ADJACENT:
        tag: type
        content: value
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
