crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_adjacent_tagging_with_opaque_proxy_struct_variant.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Message, UserId).unwrap()"
---
? namespace: ROOT
  name: Message
: ENUM:
    - 0:
        SignIn:
          - STRUCT:
              - user_id:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
          - []
    - ADJACENT:
        tag: type
        content: value
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
