crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_internal_tagging_tuple_variant_transparent_and_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Message, UserId).unwrap()"
---
? namespace: ROOT
  name: Message
: ENUM:
    - 0:
        Pair:
          - TUPLE:
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
          - []
    - INTERNAL:
        tag: type
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
